--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ flask-sqlalchemy = "*"
 flask-socketio = "*"
 psycopg2 = "*"
 psycopg2-binary = "*"
+gevent = "*"
 
 [requires]
 python_version = "3.6"
